--- a/style.css
+++ b/style.css
@@ -341,7 +341,7 @@ span {
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  min-height: auto;
+  min-height: 100vh;
   padding-bottom: 5rem;
 }
 
@@ -434,7 +434,7 @@ span {
 /*Skills design*/
 
 .skills {
-  min-height: auto;
+  min-height: 100vh;
   padding-bottom: 7rem;
   background: var(--second-bg-color);
 }
